[package]
name = "dns-cache-bpf"
version = "0.1.0"
authors = ["FUJITA Tomonori <fujita.tomonori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
clap = "2"
ctrlc = "3.1.9"
libbpf-rs = "0.10"
libbpf-sys = { version = "0.3.0-2" }
libc = "0.2"

[build-dependencies]
libbpf-cargo = "0.7"
